addded skills content

--- a/index.html
+++ b/index.html
@@ -62,6 +62,38 @@
             </div>
 
         </section>
+        <!-- What I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanila Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quas quo, molestias beatae rerum quasi.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Similique quibusdam maiores culpa suscipit consectetur incidunt at cum totam. Adipisci earum recusandae molestias veniam.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">NodeJS</p>
+                    <p class="skill-description">Ducimus, autem harum. Nobis voluptatum ab iusto sed quo sint sunt eius dolor nulla beatae?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoBD</p>
+                    <p class="skill-description">Atque amet excepturi minima, nostrum, nisi reprehenderit, quos expedita quidem quaerat quod veritatis accusantium! Qui.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title">A summary Of my resume</h3>
+        </section>
+
     </main>
 
     <footer>
