contact us added

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
                 <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
-        
+
         <div class="banner">
             <div>
                 <h3 class="banner-subTitle">Hi! I am</h3>
-            <h1 class="banner-title">Tawfiq</h1>
-            <p class="banner-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero amet modi magni, reiciendis iure vero quos consequatur aliquid delectus illum rem eum reprehenderit quo, dolor sequi harum cum excepturi facere?</p>
-            <button class="btn-primary" >Download CV</button>
+                <h1 class="banner-title">Tawfiq</h1>
+                <p class="banner-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero amet modi
+                    magni, reiciendis iure vero quos consequatur aliquid delectus illum rem eum reprehenderit quo, dolor
+                    sequi harum cum excepturi facere?</p>
+                <button class="btn-primary">Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
 
@@ -39,9 +41,13 @@
     <main>
         <section class="about">
             <h3 class="section-title">About me</h3>
-            <p class="section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam rem, delectus provident iure totam ducimus tenetur, culpa asperiores, odit ad doloribus consequatur? Soluta voluptatum aperiam expedita cupiditate, mollitia quam et.
-            Quidem blanditiis, maiores optio tempora et fugit. Impedit distinctio qui animi quae quisquam numquam, repudiandae libero deserunt ab esse, optio sequi perspiciatis ducimus ullam et debitis officia quod possimus aliquid.</p>
-            
+            <p class="section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam rem,
+                delectus provident iure totam ducimus tenetur, culpa asperiores, odit ad doloribus consequatur? Soluta
+                voluptatum aperiam expedita cupiditate, mollitia quam et.
+                Quidem blanditiis, maiores optio tempora et fugit. Impedit distinctio qui animi quae quisquam numquam,
+                repudiandae libero deserunt ab esse, optio sequi perspiciatis ducimus ullam et debitis officia quod
+                possimus aliquid.</p>
+
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
@@ -69,22 +75,26 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanila Javascript</p>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quas quo, molestias beatae rerum quasi.</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quas
+                        quo, molestias beatae rerum quasi.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-description">Similique quibusdam maiores culpa suscipit consectetur incidunt at cum totam. Adipisci earum recusandae molestias veniam.</p>
+                    <p class="skill-description">Similique quibusdam maiores culpa suscipit consectetur incidunt at cum
+                        totam. Adipisci earum recusandae molestias veniam.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">NodeJS</p>
-                    <p class="skill-description">Ducimus, autem harum. Nobis voluptatum ab iusto sed quo sint sunt eius dolor nulla beatae?</p>
+                    <p class="skill-description">Ducimus, autem harum. Nobis voluptatum ab iusto sed quo sint sunt eius
+                        dolor nulla beatae?</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">MongoBD</p>
-                    <p class="skill-description">Atque amet excepturi minima, nostrum, nisi reprehenderit, quos expedita quidem quaerat quod veritatis accusantium! Qui.</p>
+                    <p class="skill-description">Atque amet excepturi minima, nostrum, nisi reprehenderit, quos expedita
+                        quidem quaerat quod veritatis accusantium! Qui.</p>
                 </div>
             </div>
         </section>
@@ -92,8 +102,92 @@
         <!-- Resume Section -->
         <section class="resume">
             <h3 class="section-title">A summary Of my resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                    <hr>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title
+                        ">Master In Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, recusandae
+                            repudiandae omnis
+                            ipsa id accusantium dignissimos labore officiis ad asperiores!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
+        <!-- contact section -->
+        <section class="contact">
 
+            <div class="">
+                <h3 class="section-title">Let's Connect</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque, ut animi, temporibus reiciendis officia inventore deleniti laborum voluptatum voluptatem aliquam libero quis distinctio facere tempora, quae quos incidunt? Earum, quas.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Massage me</h3>
+            </div>
+
+        </section>
     </main>
 
     <footer>
